# CodeAlpha-Network-Intrusion-Detection-System

./: .dockerignore  .env.local.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  next.config.mjs  package.json  pyproject.toml  pytest.ini  vercel.json
api/: index.py
backend/: .env.example  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/v1/: api.py
backend/api/v1/endpoints/: __init__.py  auth.py
backend/api/v1/routes/: alerts.py  rules.py
backend/api/websocket/: manager.py
backend/core/: config.py  constants.py  dependencies.py  exceptions.py  logging.py
backend/database/: seed.py
backend/detection/: eve_log_watcher.py  suricata_manager.py
backend/middleware/: rate_limiter.py
backend/models/: alert.py  audit_log.py  base.py
backend/repositories/: __init__.py  alert_repository.py  audit_repository.py  base.py  event_repository.py
backend/schemas/: __init__.py  alert.py  common.py
backend/services/: __init__.py  alert_service.py  blocked_ip_service.py  rule_service.py  statistics_service.py
deploy/: docker-compose.prod.yml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.suricata  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  INSTALLATION.md  RULE_GUIDE.md  USER_GUIDE.md
frontend/: jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
hooks/: useWebSocket.ts
lib/: api.ts
scripts/: generate_threats.py  (+2 more)
(+28 files in other folders)
