[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nids-backend"
version = "1.0.0"
description = "Network Intrusion Detection System - Backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
